--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "18.14.6",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
+    "eslint": "8.35.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-import": "2.27.5",
+    "prettier": "2.8.4",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
     "typescript": "4.9.5"
