chore: lint configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,9 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "no-underscore-dangle":"off"
+      "no-underscore-dangle": "off",
+      "import/prefer-default-export": "off",
+      "import/extensions": "off",
+      "import/no-unresolved": "off"
     }
 }
-
