--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,6 @@
     },
     "extends": [
         "airbnb-base",
-        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -13,7 +12,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
       "no-underscore-dangle": "off",
