--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "lint": "eslint --fix --ext .ts ."  
+    "lint": "eslint --fix --ext .ts ."
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,6 @@
     "eslint": "8.35.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-import": "2.27.5",
     "prettier": "2.8.4",
     "tsup": "6.6.3",
     "tsx": "3.12.3",
@@ -27,6 +26,7 @@
   },
   "dependencies": {
     "dotenv": "16.0.3",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "fastify": "4.14.1",
     "zod": "3.21.4"
   }
